00_lab_env/networkpolicies/kube-system-netpols.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "cilium-health-checks"
spec:
  endpointSelector:
    matchLabels:
      "reserved:health": ""
  ingress:
    - fromEntities:
        - remote-node
  egress:
    - toEntities:
        - remote-node
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: global-egress-allow
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: global-dns
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 53
